# OpenPyExamples

./: .gitignore  APIStepDefinitions.cs  AppProperties.cs  Helper.cs  MyTestClass.cs  Program.cs  README.md  TestXml.cs  VariableStore.cs  config.xml  etcmain.py  etcuimain.py  etmtestconverter.py  etmuitestconverter.py  excelutils.py  ideas.txt  setup.cfg  testpandas.py  tox.ini
ova/: instrructions.md
src/etm_converter/: api_converter.py  api_main.py  converter_common.py  diff_main.py  excel_utils.py  generator.py  model.mmd  model.py  ui_converter.py  ui_main.py  utils.py
test/etm_converter/: test_api_converter.py  test_excel_utils.py  test_rewrite.xlsx  test_ui_converter.py
