[coverage:report]
show_missing = True
[coverage:run]
branch = True
source = etm_converter
[metadata]
author = Michael Visee
author_email = mvisee@5kay.com
description = This package generates Gherkin features
long_description = file: README.md
long_description_content_type = text/markdown
name = openpyexamples
url = https://github.com/5kaydev/OpenPyExamples.git
version = 0.0.1
[options]
include_package_data = True
install_requires =
    openpyxl>=3.1.0,<3.2
package_dir =
    = src
packages = find:
python_requires = >=3.10
[options.entry_points]
console_scripts =
    etcapi = etm_converter.api_main:api_main
    etcui = etm_converter.ui_main:ui_main
[options.packages.find]
excludes =
    test*
where = src
[testenv]
deps =
    pytest
    pytest-cov
[tool:pytest]
addopts = --cov
testpaths =
    test

